2A/05_Projet_GL/src/test/deca/context/valid/complet/58_instanceof_ifTheelse.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

}


{
    A a ; 

    if(a instanceof Object) {

    }
    else if(a instanceof A ) {

    }
    else {
        
    }
}